--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Acerca</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
-                        <a href="package.html" class="nav-item nav-link">Tour Packages</a>
+                        <a href="package.html" class="nav-item nav-link">Guias</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Tienda en linea</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                 <a href="single.html" class="dropdown-item">Blog Detail</a>
@@ -116,8 +116,8 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Tours & Travel</h4>
-                            <h1 class="display-3 text-white mb-md-4">Discover Amazing Places With Us</h1>
+                            <h4 class="text-white text-uppercase mb-md-3">Jardin curativo</h4>
+                            <h3 class="display-3 text-white mb-md-4">Descubre el poder de la naturaleza</h3>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Conocer más</a>
                         </div>
                     </div>
@@ -148,10 +148,10 @@
                             <div class="col-md-3">
                                 <div class="mb-3 mb-md-0">
                                     <select class="custom-select px-4" style="height: 47px;">
-                                        <option selected>Destination</option>
-                                        <option value="1">Destination 1</option>
-                                        <option value="2">Destination 1</option>
-                                        <option value="3">Destination 1</option>
+                                        <option selected>Historia</option>
+                                        <option value="1">Historia 1</option>
+                                        <option value="2">Historia 2</option>
+                                        <option value="3">Historia 2</option>
                                     </select>
                                 </div>
                             </div>
@@ -172,17 +172,17 @@
                             <div class="col-md-3">
                                 <div class="mb-3 mb-md-0">
                                     <select class="custom-select px-4" style="height: 47px;">
-                                        <option selected>Duration</option>
-                                        <option value="1">Duration 1</option>
-                                        <option value="2">Duration 1</option>
-                                        <option value="3">Duration 1</option>
+                                        <option selected>Mitologia</option>
+                                        <option value="1">Mitologia 1</option>
+                                        <option value="2">Mitologia 2</option>
+                                        <option value="3">Mitologia 3</option>
                                     </select>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <button class="btn btn-primary btn-block" type="submit" style="height: 47px; margin-top: -2px;">Submit</button>
+                        <button class="btn btn-primary btn-block" type="submit" style="height: 47px; margin-top: -2px;">Enviar</button>
                     </div>
                 </div>
             </div>
@@ -426,8 +426,8 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
-                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Guides</h6>
-                <h1>Our Travel Guides</h1>
+                <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Recetas</h6>
+                <h1>y consejos de uso</h1>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6 pb-2">
@@ -442,7 +442,7 @@
                             </div>
                         </div>
                         <div class="text-center py-4">
-                            <h5 class="text-truncate">Guide Name</h5>
+                            <h5 class="text-truncate">Hierba Dulce</h5>
                             <p class="m-0">Designation</p>
                         </div>
                     </div>
@@ -459,7 +459,7 @@
                             </div>
                         </div>
                         <div class="text-center py-4">
-                            <h5 class="text-truncate">Guide Name</h5>
+                            <h5 class="text-truncate">Hoja santa</h5>
                             <p class="m-0">Designation</p>
                         </div>
                     </div>
@@ -476,7 +476,7 @@
                             </div>
                         </div>
                         <div class="text-center py-4">
-                            <h5 class="text-truncate">Guide Name</h5>
+                            <h5 class="text-truncate">Maguey</h5>
                             <p class="m-0">Designation</p>
                         </div>
                     </div>
@@ -493,7 +493,7 @@
                             </div>
                         </div>
                         <div class="text-center py-4">
-                            <h5 class="text-truncate">Guide Name</h5>
+                            <h5 class="text-truncate">Vaporrub</h5>
                             <p class="m-0">Designation</p>
                         </div>
                     </div>
